blackboxing the swap

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Leaderboadr</title>
+	<title>Jahin's Leaderboadr Simulator</title>
 	<link rel="stylesheet" href="leaderboard.css">
 </head>
 <body>
