newCome animation added

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,7 +20,7 @@
 			<span class="name">rahat</span>
 			<span class="total">5</span>
 		</div>
-		<div class="rank_box" style="top: 75px" id="test2">
+		<div class="rank_box" style="top: 75px; right: 250px;" id="test2">
 			<span class="rank">9</span>
 			<span class="name">d_joker</span>
 			<span class="total">24</span>
