sound effects added 1

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -10,6 +10,14 @@
 	<div id="dayBar">
 		<span >Day <span id="dayCount">0</span></span>
 	</div>
+	
+	<audio id="newSound">
+	  	<source src="sound/newSound.mp3" type="audio/mpeg" autoplay="true">
+	</audio>
+
+	<audio id="swapSound">
+	  	<source src="sound/swapSound.wav" type="audio/mpeg" autoplay="true">
+	</audio>
 
 	<div id="container">
 		
@@ -19,8 +27,8 @@
 			<span class="rank">10</span>
 			<span class="name">rahat</span>
 			<span class="total">5</span>
-		</div>
-		<div class="rank_box" style="top: 75px; right: 250px;" id="test2">
+		</div> -->
+		<!-- <div class="rank_box" style="top: 75px; right: 250px;" id="test2">
 			<span class="rank">9</span>
 			<span class="name">d_joker</span>
 			<span class="total">24</span>
